# ostis-metasystem

platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/: CMakeLists.txt  TranslationModule.cpp  TranslationModule.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/agent/: StructureSubdividingAgent.cpp  StructureSubdividingAgent.hpp  StructureToTextTranslationAgent.cpp  StructureToTextTranslationAgent.hpp  SubstructuresToTextTranslationAgent.cpp  SubstructuresToTextTranslationAgent.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/constants/: TranslationConstants.cpp  TranslationConstants.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/eraser/: TranslationEraser.cpp  TranslationEraser.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/generator/: TranslationGenerator.cpp  TranslationGenerator.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/handler/: TranslationHandler.cpp  TranslationHandler.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/keynodes/: TranslationKeynodes.cpp  TranslationKeynodes.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/manager/: StructureSubdividingManager.cpp  StructureSubdividingManager.hpp  StructureToTextTranslationManager.cpp  StructureToTextTranslationManager.hpp  SubstructuresToTextTranslationManager.cpp  SubstructuresToTextTranslationManager.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/searcher/: TranslationSearcher.cpp  TranslationSearcher.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/templates/: TranslationTemplates.cpp  TranslationTemplates.hpp
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/structure-to-text-translation-module/translator/: FromConceptSemanticNeighbourhoodTranslator.cpp  FromConceptSemanticNeighbourhoodTranslator.hpp  FromQuasybinaryNodeSemanticNeighbourhoodTranslator.cpp  FromQuasybinaryNodeSemanticNeighbourhoodTranslator.hpp  NrelFromNodeSemanticNeighbourhoodTranslator.cpp  NrelFromNodeSemanticNeighbourhoodTranslator.hpp  NrelInLinkSemanticNeighbourhoodTranslator.cpp  NrelInLinkSemanticNeighbourhoodTranslator.hpp  NrelInNodeSemanticNeighbourhoodTranslator.cpp  NrelInNodeSemanticNeighbourhoodTranslator.hpp  NrelInQuasybinaryNodeSemanticNeighbourhoodTranslator.cpp  NrelInQuasybinaryNodeSemanticNeighbourhoodTranslator.hpp  SemanticNeighbourhoodTranslator.cpp  SemanticNeighbourhoodTranslator.hpp  (+2 more)
(+11 files in other folders)
